derive/test/compile_fail/enum_unindexed_fields.stderr
error: proc-macro derive panicked
 --> compile_fail/enum_unindexed_fields.rs:3:10
  |
3 | #[derive(Value)]
  |          ^^^^^
  |
  = help: message: unsupported attribute `unindexed_fields` on enum
